--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-# VITE_API_URL=http://student-pool.onrender.com
-VITE_API_URL=http://localhost:4000
+VITE_API_URL=http://student-pool.onrender.com
+# VITE_API_URL=http://localhost:4000
 
 JWT_SECRET=yourSuperSecretKey
