--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.0.1"
+    "leaflet": "^1.9.4",
+    "prisma": "^6.0.1",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
